// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Omnitracking track events definitions \`Checkout Step Viewed\` return should match the snapshot 1`] = `
Object {
  "tid": 10097,
  "val": "{\\"type\\":\\"SUBMIT\\",\\"paymentAttemptReferenceId\\":\\"d9864a1c112d-47ff-8ee4-968c-5acecae23_1567010265879\\"}",
}
`;

exports[`Omnitracking track events definitions \`Logout\` return should match the snapshot 1`] = `
Object {
  "tid": 431,
}
`;

exports[`Omnitracking track events definitions \`Place Order Started\` return should match the snapshot 1`] = `
Array [
  Object {
    "tid": 10097,
    "val": "{\\"type\\":\\"TRANSACTION\\",\\"paymentAttemptReferenceId\\":\\"d9864a1c112d-47ff-8ee4-968c-5acecae23_1567010265879\\"}",
  },
  Object {
    "tid": 188,
    "val": "{\\"type\\":\\"TRANSACTION\\",\\"paymentAttemptReferenceId\\":\\"d9864a1c112d-47ff-8ee4-968c-5acecae23_1567010265879\\"}",
  },
]
`;

exports[`Omnitracking track events definitions \`Product Added to Cart\` return should match the snapshot 1`] = `
Object {
  "tid": 16,
  "val": "507f1f77bcf86cd799439011",
}
`;

exports[`Omnitracking track events definitions \`Product Added to Wishlist\` return should match the snapshot 1`] = `
Object {
  "tid": 35,
  "val": "507f1f77bcf86cd799439011",
}
`;

exports[`Omnitracking track events definitions \`Sign-up Form Viewed\` return should match the snapshot 1`] = `
Object {
  "tid": 10097,
  "val": "{\\"type\\":\\"REGISTER\\",\\"paymentAttemptReferenceId\\":\\"d9864a1c112d-47ff-8ee4-968c-5acecae23_1567010265879\\"}",
}
`;

exports[`Omnitracking track events definitions \`pageDefinitions\` should match snapshot 1`] = `
Object {
  "CheckoutPageVisited": Array [
    "abTests",
    "accessTier",
    "actionArea",
    "assistantUserId",
    "basketCurrency",
    "basketId",
    "basketQuantity",
    "basketValue",
    "clientAdvertisingID",
    "clientCountry",
    "clientGender",
    "clientInstallId",
    "clientLanguage",
    "clientSDKVersion",
    "clientVersion",
    "department",
    "device",
    "deviceId",
    "deviceLanguage",
    "deviceOS",
    "dismiss",
    "domainUrl",
    "elementsSeen",
    "errorMessage",
    "exitInteraction",
    "geoLocation",
    "geoLocationCity",
    "geoLocationState",
    "httpStatusCode",
    "inStoreSessionId",
    "internalRequest",
    "ip",
    "isBot",
    "isCustomer",
    "isExclusive",
    "isLogged",
    "itemList",
    "itemStoreStockList",
    "loginType",
    "navigatedFrom",
    "ordersList",
    "pageId",
    "pageName",
    "parentId",
    "performanceTimings",
    "performanceTrackingIds",
    "previousUniqueViewId",
    "priceType",
    "productShippingOptions",
    "pushStatus",
    "referrerUnionId",
    "returnDetails",
    "returnItemsSelectionList",
    "screenHeight",
    "screenWidth",
    "searchQuery",
    "searchResultCount",
    "searchResultsType",
    "searchSuggestion",
    "searchType",
    "selectedPaymentMethod",
    "sessionId",
    "startedTyping",
    "status",
    "stockpointId",
    "storeId",
    "suggestionType",
    "uniqueViewId",
    "url",
    "userBenefits",
    "userCountryLocation",
    "userGender",
    "utmCampaign",
    "utmContent",
    "utmMedium",
    "utmSource",
    "utmTerm",
    "uuid",
    "val",
    "viewCurrency",
    "viewGender",
    "viewSubType",
    "viewType",
    "weChatOpenID",
    "weChatUnionId",
    "wishlistQuantity",
    "availablePaymentOptions",
    "checkoutOrderId",
    "checkoutStep",
    "defaultPaymentMethod",
    "isShippingAddressClickAndCollect",
    "orderCode",
    "orderCurrency",
    "orderId",
    "orderVAT",
    "orderValue",
    "productCount",
    "promoCode",
    "saleProductCount",
    "selectableFieldsList",
    "shippingTotalValue",
    "shippingTypeFee",
    "userCheckoutType",
  ],
  "GenericPageVisited": Array [
    "abTests",
    "accessTier",
    "actionArea",
    "assistantUserId",
    "basketCurrency",
    "basketId",
    "basketQuantity",
    "basketValue",
    "clientAdvertisingID",
    "clientCountry",
    "clientGender",
    "clientInstallId",
    "clientLanguage",
    "clientSDKVersion",
    "clientVersion",
    "department",
    "device",
    "deviceId",
    "deviceLanguage",
    "deviceOS",
    "dismiss",
    "domainUrl",
    "elementsSeen",
    "errorMessage",
    "exitInteraction",
    "geoLocation",
    "geoLocationCity",
    "geoLocationState",
    "httpStatusCode",
    "inStoreSessionId",
    "internalRequest",
    "ip",
    "isBot",
    "isCustomer",
    "isExclusive",
    "isLogged",
    "itemList",
    "itemStoreStockList",
    "loginType",
    "navigatedFrom",
    "ordersList",
    "pageId",
    "pageName",
    "parentId",
    "performanceTimings",
    "performanceTrackingIds",
    "previousUniqueViewId",
    "priceType",
    "productShippingOptions",
    "pushStatus",
    "referrerUnionId",
    "returnDetails",
    "returnItemsSelectionList",
    "screenHeight",
    "screenWidth",
    "searchQuery",
    "searchResultCount",
    "searchResultsType",
    "searchSuggestion",
    "searchType",
    "selectedPaymentMethod",
    "sessionId",
    "startedTyping",
    "status",
    "stockpointId",
    "storeId",
    "suggestionType",
    "uniqueViewId",
    "url",
    "userBenefits",
    "userCountryLocation",
    "userGender",
    "utmCampaign",
    "utmContent",
    "utmMedium",
    "utmSource",
    "utmTerm",
    "uuid",
    "val",
    "viewCurrency",
    "viewGender",
    "viewSubType",
    "viewType",
    "weChatOpenID",
    "weChatUnionId",
    "wishlistQuantity",
    "attributesList",
    "categoryList",
    "colourList",
    "designerList",
    "discount",
    "filterType",
    "filtersApplied",
    "hasNewMessages",
    "integrationId",
    "interactionType",
    "itemPriceList",
    "itemSalePriceList",
    "itemStockList",
    "itemStoreList",
    "marketType",
    "merchantLocationId",
    "messageId",
    "messageNumber",
    "pageNumber",
    "priceFilter",
    "returnId",
    "scaleList",
    "selectableFieldsList",
    "sizeList",
    "skuItemList",
    "tagList",
    "variantId",
    "deliveryOptions",
    "deliveryOptionsDetails",
    "orderDetails",
    "orderList",
    "orderSummary",
    "paymentStatus",
    "selectedOrderType",
    "shippingTotalValue",
    "shippingTypeFee",
    "tagSkuList",
  ],
  "ListingPageVisited": Array [
    "abTests",
    "accessTier",
    "actionArea",
    "assistantUserId",
    "basketCurrency",
    "basketId",
    "basketQuantity",
    "basketValue",
    "clientAdvertisingID",
    "clientCountry",
    "clientGender",
    "clientInstallId",
    "clientLanguage",
    "clientSDKVersion",
    "clientVersion",
    "department",
    "device",
    "deviceId",
    "deviceLanguage",
    "deviceOS",
    "dismiss",
    "domainUrl",
    "elementsSeen",
    "errorMessage",
    "exitInteraction",
    "geoLocation",
    "geoLocationCity",
    "geoLocationState",
    "httpStatusCode",
    "inStoreSessionId",
    "internalRequest",
    "ip",
    "isBot",
    "isCustomer",
    "isExclusive",
    "isLogged",
    "itemList",
    "itemStoreStockList",
    "loginType",
    "navigatedFrom",
    "ordersList",
    "pageId",
    "pageName",
    "parentId",
    "performanceTimings",
    "performanceTrackingIds",
    "previousUniqueViewId",
    "priceType",
    "productShippingOptions",
    "pushStatus",
    "referrerUnionId",
    "returnDetails",
    "returnItemsSelectionList",
    "screenHeight",
    "screenWidth",
    "searchQuery",
    "searchResultCount",
    "searchResultsType",
    "searchSuggestion",
    "searchType",
    "selectedPaymentMethod",
    "sessionId",
    "startedTyping",
    "status",
    "stockpointId",
    "storeId",
    "suggestionType",
    "uniqueViewId",
    "url",
    "userBenefits",
    "userCountryLocation",
    "userGender",
    "utmCampaign",
    "utmContent",
    "utmMedium",
    "utmSource",
    "utmTerm",
    "uuid",
    "val",
    "viewCurrency",
    "viewGender",
    "viewSubType",
    "viewType",
    "weChatOpenID",
    "weChatUnionId",
    "wishlistQuantity",
    "categoryId",
    "categoryName",
    "collectionId",
    "designerId",
    "designerName",
    "didYouMean",
    "itemRankTypeList",
    "outfitId",
    "promotionId",
    "recsType",
    "saleType",
    "seasonId",
    "setId",
    "skuItemsListWithSimilar",
    "sortOption",
  ],
  "ProductPageVisited": Array [
    "abTests",
    "accessTier",
    "actionArea",
    "assistantUserId",
    "basketCurrency",
    "basketId",
    "basketQuantity",
    "basketValue",
    "clientAdvertisingID",
    "clientCountry",
    "clientGender",
    "clientInstallId",
    "clientLanguage",
    "clientSDKVersion",
    "clientVersion",
    "department",
    "device",
    "deviceId",
    "deviceLanguage",
    "deviceOS",
    "dismiss",
    "domainUrl",
    "elementsSeen",
    "errorMessage",
    "exitInteraction",
    "geoLocation",
    "geoLocationCity",
    "geoLocationState",
    "httpStatusCode",
    "inStoreSessionId",
    "internalRequest",
    "ip",
    "isBot",
    "isCustomer",
    "isExclusive",
    "isLogged",
    "itemList",
    "itemStoreStockList",
    "loginType",
    "navigatedFrom",
    "ordersList",
    "pageId",
    "pageName",
    "parentId",
    "performanceTimings",
    "performanceTrackingIds",
    "previousUniqueViewId",
    "priceType",
    "productShippingOptions",
    "pushStatus",
    "referrerUnionId",
    "returnDetails",
    "returnItemsSelectionList",
    "screenHeight",
    "screenWidth",
    "searchQuery",
    "searchResultCount",
    "searchResultsType",
    "searchSuggestion",
    "searchType",
    "selectedPaymentMethod",
    "sessionId",
    "startedTyping",
    "status",
    "stockpointId",
    "storeId",
    "suggestionType",
    "uniqueViewId",
    "url",
    "userBenefits",
    "userCountryLocation",
    "userGender",
    "utmCampaign",
    "utmContent",
    "utmMedium",
    "utmSource",
    "utmTerm",
    "uuid",
    "val",
    "viewCurrency",
    "viewGender",
    "viewSubType",
    "viewType",
    "weChatOpenID",
    "weChatUnionId",
    "wishlistQuantity",
    "applePayStatus",
    "categoryId",
    "categoryName",
    "collectionId",
    "complementaryLookType",
    "designerId",
    "designerName",
    "lookId",
    "numberOfSizes",
    "numberOfSizesInStore",
    "rankType",
    "recommendationSource",
    "seasonId",
    "totalStock",
    "totalStockInStore",
    "unitFullPrice",
    "unitSalePrice",
    "productId",
  ],
}
`;

exports[`Omnitracking track events definitions \`pageEventsFilter\` should match snapshot 1`] = `
Object {
  "CheckoutPageVisited": Array [
    "checkout",
    "checkout-delivery-method",
    "checkout-payment",
    "checkout-review",
    "checkout-shipping",
    "Checkout",
    "confirm",
    "payment",
  ],
  "ListingPageVisited": Array [
    "product-listing",
    "search",
    "ProductList",
    "listing",
    "search",
    "sets",
  ],
  "ProductPageVisited": Array [
    "product-details",
    "ProductDetail",
    "product",
  ],
}
`;

exports[`Omnitracking track events definitions \`trackDefinitions\` should match snapshot 1`] = `
Array [
  "accessTier",
  "actionArea",
  "advertiserId",
  "categoryId",
  "categoryName",
  "checkoutOrderId",
  "contentProvider",
  "contentType",
  "deliveryInformationDetails",
  "deliveryOptions",
  "deliveryOptionsDetails",
  "designerId",
  "designerName",
  "dismiss",
  "errorMessage",
  "hasError",
  "itemCoordinates",
  "itemQuantity",
  "itemSize",
  "moduleId",
  "moduleLoadTime",
  "moduleState",
  "moduleType",
  "moduleWasInteracted",
  "moduleWasSeen",
  "orderCode",
  "orderCodeId",
  "orderSummary",
  "priceCurrency",
  "productCount",
  "productId",
  "promoCode",
  "provider",
  "recommendationsId",
  "recommendationsProductList",
  "recsLoaded",
  "recsRequested",
  "recsStrategy",
  "recsType",
  "refundInformationDetails",
  "scrollDepth",
  "slotIndex",
  "sortOption",
  "sourceDescription",
  "sourceGroupDescription",
  "sourceId",
  "sourceType",
  "sourceWasSeen",
  "status",
  "storeConnections",
  "storeId",
  "targetId",
  "targetType",
  "totalStock",
  "totalStockInStore",
  "uniqueViewId",
  "unitFullPrice",
  "unitSalePrice",
  "uuid",
  "attributesList",
  "categoryList",
  "colourList",
  "designerList",
  "discount",
  "filterType",
  "filtersApplied",
  "hasNewMessages",
  "integrationId",
  "interactionType",
  "itemPriceList",
  "itemSalePriceList",
  "itemStockList",
  "itemStoreList",
  "marketType",
  "merchantLocationId",
  "messageId",
  "messageNumber",
  "pageNumber",
  "priceFilter",
  "returnId",
  "scaleList",
  "selectableFieldsList",
  "sizeList",
  "skuItemList",
  "tagList",
  "variantId",
  "val",
  "tid",
]
`;
